tests/NormalTests/paczka1/fuzzy1/10725989.err
Error in line 7: y1VLrK A487 158,3
Error in line 22: emUkLYH A782 29,7
Error in line 25: emUkLYH A300 48,0
Error in line 3: vANg1 A300 25,2
Error in line 27: y1VLrK A300 52,0
Error in line 32: y1VLrK A782 77,4
